# laser_pointer_input_sar

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  package.xml
config/: rosconsole_DEBUG.config  rosconsole_INFO.config  xorg.conf
include/nn_laser_spot_tracking/: laser3DTracking.h
laser_udp_bridge/: CMakeLists.txt  package.xml
laser_udp_bridge/scripts/: laser_udp_bridge_node.py
launch/: aruco_table_calibration.launch  docker_k4a_laser_tracking.launch  docker_stack.launch  laser_tracking.launch  laser_udp_bridge.launch  tracking_2d.launch
msg/: KeypointImage.msg
scripts/: aruco_table_calib_node.py  inferNodeROS.py
tools/: udp_client.py
